Removed css override of side bar size due to issue viewing on mobile

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,7 +1,3 @@
-.side-bar {
-  width: calc((100% - 75rem) / 2 + 16.5rem);
-}
-
 .dark-mode-toggle {
   margin: 0 auto;
   padding-bottom: 20px;
